--- a/views/index.html
+++ b/views/index.html
@@ -309,12 +309,12 @@
 </body>
 <!--动态标题-->
 <script>
+    const title = document.title
     document.addEventListener('visibilitychange', function () {
         if (document.visibilityState == 'hidden') {
-            normal_title = document.title;
             document.title = '人呢？快回来！';
         } else {
-            document.title = normal_title;
+            document.title = title;
         }
     });</script>
 
