--- a/views/auth/role-user-add.html
+++ b/views/auth/role-user-add.html
@@ -1,84 +1,111 @@
 <!DOCTYPE html>
 <html>
-  
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>欢迎页面-X-admin2.0</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="../../static/css/font.css">
-    <link rel="stylesheet" href="../../static/css/xadmin.css">
-    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-      <script type="text/javascript" src="../../static/lib/layui/layui.js" charset="utf-8"></script>
-      <!--会冲突-->
-      <!--<script type="text/javascript" src="./js/xadmin.js"></script>-->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="/static/css/font.css">
+    <link rel="stylesheet" href="/static/css/sweetalert.css">
+    <link rel="stylesheet" href="/static/css/xadmin.css">
+    <script type="text/javascript" src="/static/js/ztree/jquery.min.js"></script>
+    <script src="/static/js/ions_alert.js"></script>
+    <script src="/static/js/sweetalert.min.js"></script>
+    <script type="text/javascript" src="/static/lib/layui/layui.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/static/js/xadmin.js"></script>
+</head>
 
-      <link rel="stylesheet" href="../../static/css/bootstrap-chosen.css">
+<body>
+<div class="x-body">
+    <form class="layui-form" action="" lay-filter="component-form-group">
+        <div class="layui-form-item">
+            <label class="layui-form-label">角色名称</label>
+            <div class="layui-input-inline" style="width:200px;">
+                <input type="text" value="{{.role.RoleName}}" autocomplete="off" class="layui-input" disabled>
+            </div>
+        </div>
 
-      <script type="text/javascript" src="../../static/js/chosen.jquery.js"></script>
-    <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
-    <!--[if lt IE 9]>
-      <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
-      <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  
-  <body>
-    <div class="x-body">
-        <form class="layui-form" action="" lay-filter="component-form-group">
-            <div class="layui-form-item">
-                <label class="layui-form-label">角色名称</label>
-                <div class="layui-input-inline" style="width:200px;">
-                    <input type="text" value="超级管理员" autocomplete="off" class="layui-input" disabled>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">角色描述</label>
+            <div class="layui-input-inline" style="width:200px;">
+                <input type="text" value="{{.role.Desc}}" autocomplete="off" class="layui-input" disabled>
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">添加用户</label>
+            <div class="layui-input-block">
+                <select data-placeholder="请选择..." class="chosen-select" multiple style="width:350px;" tabindex="4"
+                        id="role_user_select">
+                    {{range .role.User}}
+                        <option value="{{.Id}}" selected>{{.UserName}}</option>
+                    {{end}}
+                    {{range .users}}
+                        <option value="{{.Id}}">{{.UserName}}</option>
+                    {{end}}
+                </select>
+            </div>
+        </div>
+
+
+        <div class="layui-form-item layui-layout-admin">
+            <div class="layui-input-block">
+                <div class="layui-footer">
+                    <button class="layui-btn" id="role_user_add_btn">立即提交</button>
+                    <a href="#" class="layui-btn layui-btn-primary">返回</a>
                 </div>
             </div>
+        </div>
+    </form>
+</div>
+<script>
+    // $('.chosen-select').chosen({width: "100%"});
 
+    // js获取多选框数据：
+    //
+    // var role_user_select_list=[];
+    // //获取多选框的值
+    // $("#role_user_select :selected").each(function(){
+    //     role_user_select_list.push($(this).val());
+    // });
+    $("#role_user_add_btn").click(function () {
+        var role_id = Number('{{.role.Id}}')
+        var user_ids = []
+        $("#role_user_select :selected").each(function () {
+            user_ids.push(Number($(this).val()))
+        })
+        $.ajax({
+            url: "{{urlfor "RoleController.DoRoleUser"}}",
+            type: "post",
+            data: {
+                role_id: role_id,
+                user_id: user_ids
+            },
+            success: function (data) {
+                if (data.code == 200) {
+                    ions_alert.alertSuccessToast(data.msg)
+                } else {
+                    ions_alert.alertErrorToast(data.msg)
+                }
+                setTimeout(reolad_list, 3000)
+            },
+            error: function (data) {
+                ions_alert.alertErrorToast("失败了！")
+                setTimeout(reolad_list, 3000)
+            }
+        })
+    })
 
-            <div class="layui-form-item">
-                <label class="layui-form-label">角色描述</label>
-                <div class="layui-input-inline" style="width:200px;">
-                    <input type="text" value="超级管理员角色" autocomplete="off" class="layui-input" disabled>
-                </div>
-            </div>
+    function reolad_list() {
+        debugger
+        x_admin_close()
+        window.location.href = "{{urlfor "AuthController.List"}}"
+    }
+</script>
 
-            <div class="layui-form-item">
-                <label class="layui-form-label">添加用户</label>
-                <div class="layui-input-block">
-                    <select data-placeholder="请选择..." class="chosen-select" multiple style="width:350px;" tabindex="4" id="role_user_select">
-                        <option value="用户1">用户1</option>
-                        <option value="用户2">用户2</option>
-                        <option value="用户3">用户3</option>
-                        <option value="用户4">用户4</option>
-                        <option value="用户5">用户5</option>
-                    </select>
-                </div>
-            </div>
-
-
-            <div class="layui-form-item layui-layout-admin">
-                <div class="layui-input-block">
-                    <div class="layui-footer" >
-                        <button class="layui-btn" id="role_user_add_btn">立即提交</button>
-                        <a href="#" class="layui-btn layui-btn-primary">返回</a>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
-    <script>
-        $('.chosen-select').chosen({width: "100%"});
-
-        // js获取多选框数据：
-        //
-        // var role_user_select_list=[];
-        // //获取多选框的值
-        // $("#role_user_select :selected").each(function(){
-        //     role_user_select_list.push($(this).val());
-        // });
-    </script>
-
-  </body>
+</body>
 
 </html>
