--- a/views/login/login.html
+++ b/views/login/login.html
@@ -5,7 +5,6 @@
 	<title>知了内部办公网-后台系统管理</title>
 	<meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/static/css/font.css">
@@ -36,6 +35,11 @@
     </div>
 
     <script>
+        $(document).keyup(function (event) {
+            if (event.keyCode == 13) {
+                $("#btn").click()
+            }
+        })
         //如果发生了页面嵌套，刷新页面
         if (window.parent != window) {
             window.parent.location.reload(true)
@@ -70,6 +74,7 @@
         //     })
         // })
         $(function  () {
+
             layui.use('form', function(){
               var form = layui.form;
 
@@ -108,8 +113,6 @@
               });
             });
         })
-
-        
     </script>
 
     
