--- a/views/user/person.html
+++ b/views/user/person.html
@@ -6,24 +6,18 @@
     <title>欢迎页面-X-admin2.0</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport"
-          content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi"/>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="../../static/css/font.css">
-    <link rel="stylesheet" href="../../static/css/xadmin.css">
+    <link rel="stylesheet" href="/static/css/font.css">
+    <link rel="stylesheet" href="/static/css/xadmin.css">
     <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../../static/lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
-    <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
-    <!--[if lt IE 9]>
-    <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
-    <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <script type="text/javascript" src="/static/lib/layui/layui.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/static/js/xadmin.js"></script>
 </head>
 
 <body>
 <div class="x-body">
-    <form class="layui-form">
+    <form class="layui-form" id="form">
+        <input type="hidden" name="id" value="{{.user.Id}}">
         <div class="layui-form-item">
             <label for="L_email" class="layui-form-label">
                 <span class="x-red">*</span>用户名
@@ -31,18 +25,6 @@
             <div class="layui-input-inline">
                 <input type="text" id="username" name="username" value="{{.user.UserName}}" lay-verify="required"
                        autocomplete="off" class="layui-input">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label for="L_username" class="layui-form-label">
-                <span class="x-red">*</span>密码
-            </label>
-            <div class="layui-input-inline">
-                <input type="password" id="password" name="password" lay-verify="password"
-                       autocomplete="off" class="layui-input">
-            </div>
-            <div class="layui-form-mid layui-word-aux">
-                密码长度为6到16个字符
             </div>
         </div>
         <div class="layui-form-item">
@@ -95,68 +77,70 @@
         </div>
         <div class="layui-form-item">
             <label for="L_repass" class="layui-form-label">
-                <span class="x-red">*</span>是否启用
             </label>
-            <div class="layui-input-inline">
-                {{if eq .user.IsActive 0}}
-                    <input type="radio" name="is_active" required="" lay-verify="repass" checked
-                           autocomplete="off" class="layui-input" value="1" title="启用">
-                    <input type="radio" name="is_active" required="" lay-verify="repass"
-                           autocomplete="off" class="layui-input" value="0" title="停用">
-                {{else}}
-                    <input type="radio" name="is_active" required="" lay-verify="repass"
-                           autocomplete="off" class="layui-input" value="1" title="启用">
-                    <input type="radio" name="is_active" required="" lay-verify="repass" checked
-                           autocomplete="off" class="layui-input" value="0" title="停用">
-                {{end}}
-
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label for="L_repass" class="layui-form-label">
-            </label>
-            <button class="layui-btn" lay-filter="add" lay-submit>
+            <button id="submit" type="button" class="layui-btn" lay-filter="add" lay-submit>
                 提交
             </button>
         </div>
     </form>
 </div>
 <script>
-    layui.use(['form', 'layer'], function () {
-        $ = layui.jquery;
-        var form = layui.form
-            , layer = layui.layer;
+    // layui.use(['form', 'layer'], function () {
+    //     $ = layui.jquery;
+    //     var form = layui.form
+    //         , layer = layui.layer;
+    //
+    //     //自定义验证规则
+    //     form.verify({
+    //         nikename: function (value) {
+    //             if (value.length < 5) {
+    //                 return '昵称至少得5个字符啊';
+    //             }
+    //         }
+    //         , pass: [/(.+){6,12}$/, '密码必须6到12位']
+    //         , repass: function (value) {
+    //             if ($('#L_pass').val() != $('#L_repass').val()) {
+    //                 return '两次密码不一致';
+    //             }
+    //         }
+    //     });
 
-        //自定义验证规则
-        form.verify({
-            nikename: function (value) {
-                if (value.length < 5) {
-                    return '昵称至少得5个字符啊';
+        // //监听提交
+        // form.on('submit(add)', function (data) {
+        //     console.log(data);
+        //     //发异步，把数据提交给php
+        //     layer.alert("增加成功", {icon: 6}, function () {
+        //         // 获得frame索引
+        //         var index = parent.layer.getFrameIndex(window.name);
+        //         //关闭当前frame
+        //         parent.layer.close(index);
+        //     });
+        //     return false;
+        // });
+
+
+    // });
+    $("#submit").click(function () {
+        $.ajax({
+            url: '{{urlfor "PersonController.Post"}}',
+            type: "POST",
+            data: $("#form").serialize(),
+            before: function () {
+              console.log(11)
+            },
+            success: function (data) {
+                layer.alert(data.msg)
+                if (data.code==200) {
+                    window.location.href = "{{urlfor "PersonController.Get"}}"
+                } else {
+                    return
                 }
+            },
+            error: function (data) {
+
             }
-            , pass: [/(.+){6,12}$/, '密码必须6到12位']
-            , repass: function (value) {
-                if ($('#L_pass').val() != $('#L_repass').val()) {
-                    return '两次密码不一致';
-                }
-            }
-        });
-
-        //监听提交
-        form.on('submit(add)', function (data) {
-            console.log(data);
-            //发异步，把数据提交给php
-            layer.alert("增加成功", {icon: 6}, function () {
-                // 获得frame索引
-                var index = parent.layer.getFrameIndex(window.name);
-                //关闭当前frame
-                parent.layer.close(index);
-            });
-            return false;
-        });
-
-
-    });
+        })
+    })
 </script>
 </body>
 
