--- a/views/user/finance-list.html
+++ b/views/user/finance-list.html
@@ -34,7 +34,7 @@
         </form>
     </div>
     <xblock>
-        <button class="layui-btn" onclick="x_admin_show('导入','./member-add.html',600,400)"><i class="layui-icon"></i>导入
+        <button class="layui-btn" onclick="x_admin_show('导入','{{urlfor "FinanceController.ToImportExcel"}}',600,400)"><i class="layui-icon"></i>导入
         </button>
 
         <span class="x-right" style="line-height:40px">共有数据：{{.count}} 条</span>
