--- a/views/user/salary-detail.html
+++ b/views/user/salary-detail.html
@@ -25,7 +25,7 @@
                 <span class="x-red">*</span>工号
             </label>
             <div class="layui-input-inline">
-                <input type="text" value="{{.salary.CardId}}" class="layui-input">
+                <input type="text" value="{{.salary.CardId}}" class="layui-input" disabled>
             </div>
         </div>
         <div class="layui-form-item">
@@ -33,7 +33,7 @@
                 <span class="x-red">*</span>工资月份
             </label>
             <div class="layui-input-inline">
-                <input type="text" value="{{.salary.CardId}}" class="layui-input">
+                <input type="text" value="{{.salary.PayDate}}" class="layui-input" disabled>
             </div>
         </div>
         <div class="layui-form-item">
@@ -41,7 +41,7 @@
                 <span class="x-red">*</span>工作天数
             </label>
             <div class="layui-input-inline">
-                <input type="text" value="{{.salary.CardId}}" class="layui-input">
+                <input type="text" value="{{.salary.WorkDay}}" class="layui-input" disabled>
             </div>
         </div>
         <div class="layui-form-item">
@@ -49,7 +49,7 @@
                 <span class="x-red">*</span>奖金
             </label>
             <div class="layui-input-inline">
-                <input type="text" value="{{.salary.CardId}}" class="layui-input">
+                <input type="text" value="{{.salary.Reward}}" class="layui-input" disabled>
             </div>
         </div>
         <div class="layui-form-item">
@@ -57,7 +57,7 @@
                 <span class="x-red">*</span>个税
             </label>
             <div class="layui-input-inline">
-                <input type="text" value="{{.salary.CardId}}" class="layui-input">
+                <input type="text" value="{{.salary.Tax}}" class="layui-input" disabled>
             </div>
         </div>
         <div class="layui-form-item">
@@ -65,7 +65,7 @@
                 <span class="x-red">*</span>罚金
             </label>
             <div class="layui-input-inline">
-                <input type="text" value="{{.salary.CardId}}" class="layui-input">
+                <input type="text" value="{{.salary.Fine}}" class="layui-input" disabled>
             </div>
         </div>
         <div class="layui-form-item">
@@ -73,7 +73,7 @@
                 <span class="x-red">*</span>补贴
             </label>
             <div class="layui-input-inline">
-                <input type="text" value="{{.salary.CardId}}" class="layui-input">
+                <input type="text" value="{{.salary.Perk}}" class="layui-input" disabled>
             </div>
         </div>
         <div class="layui-form-item">
@@ -81,7 +81,7 @@
                 <span class="x-red">*</span>社保
             </label>
             <div class="layui-input-inline">
-                <input type="text" value="{{.salary.CardId}}" class="layui-input">
+                <input type="text" value="{{.salary.Social}}" class="layui-input" disabled>
             </div>
         </div>
         <div class="layui-form-item">
@@ -89,7 +89,7 @@
                 <span class="x-red">*</span>实发工资
             </label>
             <div class="layui-input-inline">
-                <input type="text" value="{{.salary.CardId}}" class="layui-input">
+                <input type="text" value="{{.salary.NetSalary}}" class="layui-input" disabled>
             </div>
         </div>
         <div class="layui-form-item">
